# GcRpc

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  client.config  gcrpc.config
.VSCodeCounter/2025-08-11_17-13-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
example/: CMakeLists.txt  login_service.cc  login_service.h  test.pb.cc  test.pb.h  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  login_service.cc  userservice.cc
example/caller/: CMakeLists.txt  user_caller.cc
example/unit_test/: CMakeLists.txt  test_etcd_client.cc  test_logger.cc  test_protobuf.cc  test_queue.cc  test_uring.cc
include/Rpc/: buffer.h  channel.h  connection_pool.h  etcd_client.h  gcrpcapplication.h  net_base.h  pb_encoding.h  rpc_caller.h  rpc_node_info.pb.h  rpc_protocal.h  rpcprovider.h  service_register.h
include/data_structure/: hashheap.hpp
include/hipe/: dynamic_threadpool.h
protos/: generic_rpc.proto  rpc_node_info.proto  user.proto
src/: CMakeLists.txt
src/Rpc/: CMakeLists.txt  buffer.cc  channel.cc  connection_pool.cc  etcd_client.cc  event_loop.cc  gcrpcapplication.cc  gcrpcconfig.cc  generic_rpc.pb.cc  load_balancer.cc  net_base.cc  rpc_caller.cc  rpc_node_info.pb.cc  rpc_protocal.cc  rpcprovider.cc  service_register.cc  service_seeker.cc
src/hipe/: dynamic_threadpool.cc
src/include/Rpc/: buffer.h  channel.h  connection_pool.h  encoding.h  event_loop.h  gcrpcapplication.h  gcrpcconfig.h  generic_rpc.pb.h  load_balancer.h  net_base.h  pb_encoding.h  rpc_caller.h  (+4 more)
src/logger/: CMakeLists.txt  formatter.cc  logger.cc  sink.cc
src/protos/: generic_rpc.proto
test/protobuf/: main.cc  mian  myuring  test_uring.cc
(+9 files in other folders)
